# container

./: README.md  pyproject.toml
src/container/: __init__.py  loader.py  manager.py  registry.py
src/container/v0_1/: __init__.py  container_manager.py  measurement_counter.py  schema.py  session_container.py  technical_container.py  technical_validator.py  utils.py  validator.py  writer.py
src/container/v0_2/: __init__.py  container_manager.py  measurement_counter.py  reader.py  schema.py  session_container.py  technical_container.py  technical_validator.py  utils.py  validator.py  writer.py
src/hardware/container/: __init__.py  registry.py
src/hardware/container/v0_1/: reader.py
tests/: test_imports.py  test_naming_contract.py  test_session_raw_payloads.py  test_technical_event_metadata_attrs.py
